# MintBalance

./: CONTRIBUTING.md  LICENSE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AuthPanel.tsx  CashflowChart.tsx  CategoryPie.tsx  FirstLaunchDialog.tsx  LocalModelDialog.tsx  Navigation.tsx  PredictionPanel.tsx  SubscriptionForm.tsx  SubscriptionsList.tsx  SummaryCard.tsx  TransactionForm.tsx  TransactionsTable.tsx  UpdateDialog.tsx
src/hooks/: useDevtoolsGuard.ts  useUpdateCheck.ts
src/lib/: ai.ts  api.ts  finance.ts  gemini.ts  localModel.ts  mintai.ts  premium.ts
src/pages/: Dashboard.tsx  Settings.tsx  SpendingInsights.tsx  Subscriptions.tsx  Transactions.tsx  types.ts
src/store/: useAuthStore.ts  useFinanceStore.ts  useUpdateStore.ts
