[package]
name = "mintbalance"
version = "1.0.0"
edition = "2021"
description = "MintBalance desktop finance tracker"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["shell-open", "icon-ico", "icon-png", "window-set-icon", "http-all"] }
llama_cpp = { version = "0.3.2", default-features = true }
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
